@@ -1,4 +1,4 @@
-(defproject clojush "3.0.0-1-SNAPSHOT" 
+(defproject clojush "3.9.0-1-SNAPSHOT"
   :description "The Push programming language and the PushGP genetic programming
                 system implemented in Clojure. See http://pushlanguage.com"
   :license {:name "Eclipse Public License"
@@ -14,18 +14,25 @@
                  [clj-random "0.1.7"]
                  ;; https://mvnrepository.com/artifact/org.apache.commons/commons-math3
                  [org.apache.commons/commons-math3 "3.2"]
-                 [cheshire "5.7.1"]]
+                 [cheshire "5.7.1"]
+                 [prismatic/plumbing "0.5.4"]
+                 [criterium "0.4.4"]
+                 [net.totakke/libra "0.1.0"]]
   :plugins [[lein-codox "0.9.1"]
             [lein-shell "0.5.0"]
             [lein-gorilla "0.4.0"]
-            [cider/cider-nrepl "0.14.0"]
-            [lein-cloverage "1.0.6"]]
+            [cider/cider-nrepl "0.15.1"]
+            [lein-cloverage "1.0.6"]
+            [net.totakke/lein-libra "0.1.0"]]
+  :profiles {:text {:plugins [[venantius/ultra "0.5.1"]]}}
   :codox {:source-uri "http://github.com/lspector/Clojush/blob/master/{filepath}#L{line}"
           :namespaces [#"^(?!clojush\.problems)"]
           :output-path "doc"
           :metadata {:doc/format :markdown}}
-  :dev-dependencies [[lein-ccw "1.2.0"][lein-midje "3.1.3"]]
-  :profiles {:dev {:dependencies [[midje "1.7.0"]]}}
+  :ultra {:repl         false
+          :stacktraces  false
+          :tests        true}
+  :libra {:bench-paths ["test/clojush/bench"]}
   :repositories [["releases" {:url "https://clojars.org/repo"
                               :username :env
                               :sign-releases false
@@ -39,20 +46,9 @@
                   ["change" "version" "leiningen.release/bump-version" "qualifier"]
                   ["shell" "git" "commit" "-am" "Version ${:version} [ci skip]"]
                   ["vcs" "push"]]
-;;;;;;;;;; jvm settings for high performance, using most of the machine's RAM
-;  :jvm-opts ~(let [mem-to-use
-;                   (long (* (.getTotalPhysicalMemorySize
-;                              (java.lang.management.ManagementFactory/getOperatingSystemMXBean))
-;                            0.8))]
-;               ^:replace [(str "-Xmx" mem-to-use)
-;                          (str "-Xms" mem-to-use)
-;                          "-server"
-;                          "-XX:-TieredCompilation"
-;                          "-XX:+AggressiveOpts"
-;                          "-Djava.awt.headless=true"])
-  ;;;;;;;;;; misc other jvm-opts
-  ;:jvm-opts ["-Djava.awt.headless=true"]
-  ;;"-XX:+UseG1GC"
-  :jvm-opts ["-Xmx20g" "-Xms20g" "-XX:+UseParallelGC"]
-  ;:jvm-opts ["-Xmx20g"]
+  ;; faster without defaults
+  ;; https://plot.ly/~SaulShanabrook/11/?share_key=pNTJGA4S58MA29Uqskbr6j
+  ;; https://push-language.hampshire.edu/t/improving-profiling-clojush-performance-results/904/13?u=saulshanabrook
+  ;:jvm-opts ^:replace []
+  :jvm-opts ^:replace ["-Xmx20g" "-Xms20g" "-XX:+UseParallelGC"]
   :main clojush.core)
